--- a/.gitignore
+++ b/.gitignore
@@ -121,11 +121,11 @@ coverage
 # Strapi
 ############################
 
-.env
+.env.development
 license.txt
 exports
 .strapi
-dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+/.env
