--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.15.0",
-    "@strapi/plugin-users-permissions": "5.15.0",
-    "@strapi/strapi": "5.15.0",
-    "fs-extra": "^10.0.0",
-    "mime-types": "^2.1.27",
-    "pg": "8.8.0",
+    "@strapi/plugin-cloud": "5.16.1",
+    "@strapi/plugin-users-permissions": "5.16.1",
+    "@strapi/strapi": "5.16.1",
+    "fs-extra": "^11.3.0",
+    "mime-types": "^3.0.1",
+    "mysql2": "^3.14.1",
+    "pg": "8.16.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "strapi-plugin-gen-types": "^0.0.15",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/node": "^20",
